fix spacing of group admin tabs with new font

--- a/style.scss
+++ b/style.scss
@@ -1132,7 +1132,7 @@ div#subnav.item-list-tabs {
 			border: none; 
 			font-size: 90%;
 			margin: 0;
-			padding: 4px 12px;
+			padding: 4px 9px;
 		}
 		&.current a {
 			background: transparent;
@@ -2190,6 +2190,9 @@ h1#site-title,div#site-title {
 	    color: #fff; 
     }
   }
+  .credits { 
+	  font-size: 80%; 
+  } 
 }
 
 /* --- End HomePage --- }}} */ 
